# bridge_Element_examiner

./: .coveragerc  .gitignore  README.md  environment-backup.txt  environment.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat
.github/workflows/: test.yml
app/: main.py
notebooks/: choose_state_dashboard.ipynb  download_test.ipynb  scratchpad.ipynb
scripts/: build_ca_element_2022_2024.py  check_blocked_path.py  demo_discovery.py  demo_state_parser.py  dev_driver.py  download_all.py  download_all_ascii.py  download_all_element.py  download_demo.py  download_ind_state_data.py  download_test_ca_2024.py  extract_and_parse_element.py  inspect_element_xml_tags.py  parse_single_element_xml.py  session_start.py  temp_scrape_diag.py
src/: parse_xml.py
src/bridge_element_examiner/: __init__.py
src/bridge_element_examiner/analytics/: element_metrics.py
src/bridge_element_examiner/from_fhwa/: discovery.py  downloader.py
src/bridge_element_examiner/from_fhwa/discovery/: disc_element_links.py
src/bridge_element_examiner/utils/: logging_config.py
src/data/: download_data.py  extract_element_zips.py  fhwa_scraper.py  parse_element_xml.py  scrape_check.py  selenium_scraper.py
src/from_fhwa/: __init__.py  constants.py  downloader.py  select_state.py  state_fips_rec.py  state_parser.py
src/from_fhwa/discovery/: __init__.py  disc_ascii_links.py  disc_element_links.py  utils.py
src/reference/: __init__.py
tests/: test_download_data.py  test_rec.py  test_util_discovery.py
tests/mock_html/: ascii_2023.html  element_2023.html
(+8 files in other folders)
