[project]
name = "bridge-element-examiner"
version = "0.1.0"
description = "FHWA NBI bridge element downloader, parser, and analytics pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "pandas",
  "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bridge_element_examiner*"]
